--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:300,400&display=swap&subset=japanese" rel="stylesheet">
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" crossorigin="anonymous">
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="./index.css">
 	</head>
 	<body>
 		<div id="app"></div>
